--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'tomasz-wroclawski-kodilla-tester'
 include 'kodilla-intro'
 include 'kodilla-basic-tests'
+include 'kodilla-collections'
 
