--- a/kodilla-rest-api/build.gradle
+++ b/kodilla-rest-api/build.gradle
@@ -3,16 +3,17 @@ plugins {
     id 'io.spring.dependency-management'
     id 'java'
 }
-
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
-
 repositories {
     mavenCentral()
 }
-
+test {
+    useJUnitPlatform()
+}
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'com.google.code.gson', name: 'gson',version:'2.8.6'
 }
